# jr-platform

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALAR_SPRINT10.txt  INSTALAR_SPRINT11.txt  INSTALAR_SPRINT6.txt  INSTALAR_SPRINT7.txt  INSTALAR_SPRINT8.txt  INSTALAR_SPRINT9.txt  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fix-sprint5-mypy.py  jr plataforma  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/api/: main.py
apps/core/: bootstrap.py  config.py  http.py  portal.py  security.py
apps/db/: session.py
apps/models/: __init__.py  client.py  crm.py  finance.py  inventory.py  procurement.py  settings.py  tax.py  user.py  work_order.py
apps/portal/: index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/repositories/: clients.py  crm.py  dashboard.py  finance.py  inventory.py  procurement.py  projects.py  settings.py  tax.py  users.py  work_orders.py
docs/: DESKTOP_MIGRATION.md  SPRINT10_BRANDING_IGIC.md  SPRINT11_CLOUD_DEPLOYMENT.md  SPRINT12_FREE_CLOUD.md  SPRINT7_INVENTORY.md  SPRINT8_CRM_PROJECTS.md  SPRINT9_COMPANY_FISCAL_AI.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md
migrations/: env.py
tests/: conftest.py  helpers.py  test_auth.py  test_clients.py  test_cloud.py  test_cors.py  test_crm.py  test_dashboard.py  test_finance.py  test_health.py  test_inventory.py  test_procurement.py  test_projects.py  test_root.py  test_settings.py  test_tax.py  test_users.py  test_work_orders.py
(+109 files in other folders)
