[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jr-platform"
version = "0.3.0"
description = "JR Platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "PyJWT>=2.9,<3.0",
  "python-multipart>=0.0.12,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=apps --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["apps"]
